feat: nuqs-style docs with Tailwind, playground, tests, and Solid Router
- Add Tailwind CSS for styling
- Redesign docs with hero, sidebar, Installation, Usage, Playground, Test suite
- Add playground demos: Basic counter, Pagination, Hex colors, Tic Tac Toe
- Add code view examples for each demo
- Add Solid Router for proper URL routing (history mode)
- Add syntax highlighting with Prism.js (typescript, bash)
- Add package manager toggle (npm default) for install commands
- Add Turborepo for monorepo dev/build
- Configure ports: docs on 3000, e2e on 3001

Made-with: Cursor

--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "pnpm --filter solid-js-nuqs-variant run dev",
-    "build": "pnpm --filter solid-js-nuqs-variant run build",
-    "preview": "pnpm --filter solid-js-nuqs-variant run preview",
-    "test": "pnpm -r run test:run",
-    "test:run": "pnpm -r run test:run"
+    "dev": "turbo dev",
+    "build": "turbo build",
+    "preview": "turbo preview",
+    "test": "turbo run test:run",
+    "test:run": "turbo run test:run"
   },
   "devDependencies": {
+    "turbo": "^2.3.0",
     "typescript": "^5"
-  }
+  },
+  "packageManager": "pnpm@10.29.3"
 }
