--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -6,14 +6,22 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test:run": "pnpm --filter solid-query-state run test:run"
   },
   "dependencies": {
+    "@solidjs/router": "^0.15.4",
+    "prismjs": "^1.30.0",
     "solid-js": "^1.9.10",
     "solid-query-state": "workspace:*"
   },
   "devDependencies": {
+    "@tailwindcss/vite": "^4.2.1",
     "@types/node": "^24.10.1",
+    "@types/prismjs": "^1.26.6",
+    "autoprefixer": "^10.4.27",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.2.1",
     "typescript": "~5.9.3",
     "vite": "^7.0.0",
     "vite-plugin-solid": "^2.11.10"
