--- a/packages/e2e/solid/package.json
+++ b/packages/e2e/solid/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "preview": "vite preview --port 5184",
+    "preview": "vite preview",
     "test:e2e": "playwright test"
   },
   "dependencies": {
