Add full test suite to solid-query-state package
- Add lib unit tests: safe-parse, search-params, url-encoding, emitter
- Add key-isolation and parser factory tests
- Add rate-limiting and testing adapter tests
- Extend useQueryState/useQueryStates with parseAsArrayOf, clearOnDefault, debounce
- Add parseAsArrayOf custom separator test
- Add vitest coverage config and test:coverage script

Made-with: Cursor

--- a/packages/solid-query-state/package.json
+++ b/packages/solid-query-state/package.json
@@ -14,10 +14,12 @@
   },
   "scripts": {
     "test": "vitest",
-    "test:run": "vitest run"
+    "test:run": "vitest run",
+    "test:coverage": "vitest run --coverage"
   },
   "devDependencies": {
     "@solidjs/testing-library": "^0.8.10",
+    "@vitest/coverage-v8": "^4.0.18",
     "jsdom": "^28.1.0",
     "solid-js": "^1",
     "vite-plugin-solid": "^2.11.10",
