--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
-  "name": "solid-query-state-monorepo",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "dev": "turbo dev",
-    "build": "turbo build",
-    "preview": "turbo preview",
-    "test": "turbo run test:run",
-    "test:run": "turbo run test:run"
-  },
-  "devDependencies": {
-    "turbo": "^2.3.0",
-    "typescript": "^5"
-  },
-  "packageManager": "pnpm@10.29.3"
+    "name": "solid-query-state-monorepo",
+    "private": true,
+    "type": "module",
+    "scripts": {
+        "dev": "turbo dev",
+        "build": "turbo build",
+        "preview": "turbo preview",
+        "test": "turbo run test:run",
+        "test:run": "turbo run test:run",
+        "format": "oxfmt",
+        "format:check": "oxfmt --check"
+    },
+    "devDependencies": {
+        "oxfmt": "latest",
+        "turbo": "^2.3.0",
+        "typescript": "^5"
+    },
+    "packageManager": "pnpm@10.29.3"
 }
