Add GitHub CI/CD for formatting and type checking
- Add typecheck script to root and all packages
- CI workflow: type check, test, format check on pull requests
- Format workflow: format check on tag push (v*) and release publish

Made-with: Cursor

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "preview": "turbo preview",
         "test": "turbo run test:run",
         "test:run": "turbo run test:run",
+        "typecheck": "turbo run typecheck",
         "format": "oxfmt",
         "format:check": "oxfmt --check"
     },
