--- a/packages/e2e/solid/package.json
+++ b/packages/e2e/solid/package.json
@@ -6,6 +6,7 @@
     "scripts": {
         "dev": "vite",
         "build": "tsc -b && vite build",
+        "typecheck": "tsc -b --noEmit",
         "preview": "vite preview",
         "test:e2e": "playwright test"
     },
