--- a/packages/solid-query-state/package.json
+++ b/packages/solid-query-state/package.json
@@ -15,7 +15,8 @@
     "scripts": {
         "test": "vitest",
         "test:run": "vitest run",
-        "test:coverage": "vitest run --coverage"
+        "test:coverage": "vitest run --coverage",
+        "typecheck": "tsc --noEmit"
     },
     "devDependencies": {
         "@solidjs/testing-library": "^0.8.10",
