--- a/turbo.json
+++ b/turbo.json
@@ -16,6 +16,9 @@
         },
         "test:run": {
             "dependsOn": ["^build"]
+        },
+        "typecheck": {
+            "outputs": []
         }
     }
 }
