--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -30,7 +30,7 @@ jobs:
             - name: Set package version from tag
               run: |
                   VERSION=${GITHUB_REF#refs/tags/v}
-                  pnpm --filter solid-query-state pkg set version "$VERSION"
+                  cd packages/solid-query-state && npm pkg set version="$VERSION"
 
             - name: Publish to npm
               working-directory: packages/solid-query-state
