--- a/packages/solid-query-state/package.json
+++ b/packages/solid-query-state/package.json
@@ -6,17 +6,20 @@
         "url": "https://github.com/ItsNoxius/solid-query-state.git"
     },
     "type": "module",
-    "main": "./src/index.ts",
-    "module": "src/index.ts",
-    "types": "./src/index.ts",
+    "files": ["dist"],
+    "main": "./dist/index.js",
+    "module": "./dist/index.js",
+    "types": "./dist/index.d.ts",
     "exports": {
         ".": {
-            "types": "./src/index.ts",
-            "import": "./src/index.ts",
-            "default": "./src/index.ts"
+            "types": "./dist/index.d.ts",
+            "import": "./dist/index.js",
+            "default": "./dist/index.js"
         }
     },
     "scripts": {
+        "build": "tsup",
+        "prepublishOnly": "pnpm run build",
         "test": "vitest",
         "test:run": "vitest run",
         "test:coverage": "vitest run --coverage",
@@ -27,6 +30,7 @@
         "@vitest/coverage-v8": "^4.0.18",
         "jsdom": "^28.1.0",
         "solid-js": "^1",
+        "tsup": "^8.5.1",
         "vite-plugin-solid": "^2.11.10",
         "vitest": "^4.0.18"
     },
